# task-manager

./: README.md  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  README.md  main.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 2023_10_04_1929-648390f91a84_create_users_table.py  2023_10_04_2122-744472ed9f60_create_enums.py  2023_10_04_2301-906e866f88e4_create_projects_table.py  2023_10_04_2311-098aaa24185a_create_notices_table.py  2023_10_04_2331-563ad68ad159_create_notices_table.py  2023_10_08_0011-33d4d60987bc_create_user_project_association.py  2023_10_08_0033-108682672737_create_tasks_table.py  2023_10_08_0137-12ed2e48e026_create_tasks_table.py  2023_10_08_1545-4273b3ed473c_create_tasks_table.py  2023_10_09_2216-48a645d78e31_create_tasks_table.py  2023_10_09_2218-bfb514614a1b_update_users_table.py  2023_10_13_1450-b2cd528934bc_update_user_projects_table.py  2023_11_01_2357-f7e12a7ca624_create_sessions_table.py  2023_11_05_2149-0692e61b3113_create_user_project_association_table.py  2023_11_05_2156-66d5d5e0fb78_update_project_table.py
backend/api_v1/: __init__.py
backend/api_v1/auth/: crud.py  dependencies.py  schemas.py  services.py  utils.py  views.py
backend/api_v1/priorities/: crud.py  dependencies.py  schemas.py  views.py
backend/api_v1/projects/: crud.py  dependencies.py  schemas.py  views.py
backend/api_v1/roles/: crud.py  dependencies.py  schemas.py  views.py
backend/api_v1/states/: crud.py  dependencies.py  schemas.py  views.py
backend/api_v1/tasks/: crud.py  dependencies.py  schemas.py  views.py
backend/api_v1/users/: crud.py  views.py
backend/core/: config.py
backend/core/models/: __init__.py  base.py  mixins.py  notice.py  priority.py  project.py  role.py  session.py  (+5 more)
(+82 files in other folders)
